Radio streaming groups
Select channel on up to 3 streams.
Play stream on one or more media players.

FIXME: stop not working

--- a/automation.yaml
+++ b/automation.yaml
@@ -6,3 +6,8 @@
 - !include automation/mood-library.yaml
 - !include automation/mood-ballroom.yaml
 - !include automation/mood-bedroom-mark.yaml
+- !include automation/stream-radio-1.yaml
+- !include automation/stream-radio-2.yaml
+- !include automation/stream-radio-3.yaml
+- !include automation/stream-radio-none.yaml
+
