--- a/configuration.yaml
+++ b/configuration.yaml
@@ -62,7 +62,7 @@ ifttt:
   key: !secret ifttt_key
 
 scene: !include scene.yaml
-automation: !include automation.yaml
+automation: !include_dir_merge_list automation
 
 group: !include groups.yaml
 
