--- a/automation/stream-radio-1.yaml
+++ b/automation/stream-radio-1.yaml
@@ -23,17 +23,17 @@ action:
     data_template:
       entity_id: media_player.{{ trigger.entity_id.split('.')[1].split('_stream')[0] }}
       media_content_id: >
-        {% if is_state("input_select.radio_stream_1", "Z88.3") %}
-          http://ice.zradio.org/z/high.mp3
-        {%-elif is_state("input_select.radio_stream_1", "Virgin") %}
-          http://icecast.unitedradio.it/Virgin.mp3
-        {%-elif is_state("input_select.radio_stream_1", "RMC") %}
-          http://icecast.unitedradio.it/RMC.mp3
-        {%-elif is_state("input_select.radio_stream_1", "rmcHQ") %}
-          http://icecast.unitedradio.it/rmcHQ.mp3
-        {%-elif is_state("input_select.radio_stream_1", "105") %}
-          http://icecast.unitedradio.it/Radio105.mp3
+        {% if is_state("input_select.radio_stream_1", "Absolute 60s") %}
+          http://network.absoluteradio.co.uk/core/audio/mp3/live.pls?service=a6bb
+        {%-elif is_state("input_select.radio_stream_1", "Absolute 70s") %}
+          http://network.absoluteradio.co.uk/core/audio/mp3/live.pls?service=a7bb
+        {%-elif is_state("input_select.radio_stream_1", "Absolute 80s") %}
+          http://network.absoluteradio.co.uk/core/audio/mp3/live.pls?service=a8bb
+        {%-elif is_state("input_select.radio_stream_1", "Absolute 90s") %}
+          http://network.absoluteradio.co.uk/core/audio/mp3/live.pls?service=a9bb
+        {%-elif is_state("input_select.radio_stream_1", "Absolute 00s") %}
+          http://network.absoluteradio.co.uk/core/audio/mp3/live.pls?service=a0bb
         {% else %}
           none
         {% endif %}
-      media_content_type: 'audio/mp4'
+      media_content_type: 'audio/mp3'
