--- a/customize.yaml
+++ b/customize.yaml
@@ -12,6 +12,8 @@ group.liane_present:
   entity_picture: /local/wb-icons/wb_liane.png
 group.aneta_present:
   entity_picture: /local/wb-icons/wb_aneta.png
+group.tom_harrington_present:
+  entity_picture: /local/wb-icons/wb_tom_harrington.png
 device_tracker.mark_phone:
   entity_picture: /local/wb-icons/wb_mark.png
   friendly_name: "Mark Owntracks"
