--- a/input_select/stream-radio.yaml
+++ b/input_select/stream-radio.yaml
@@ -1,55 +1,55 @@
 radio_stream_1:
   name: Stream 1
   options:
-    - none
+    - None
     - "Absolute 80s"
     - "Absolute 60s"
     - "Absolute 70s"
     - "Absolute 90s"
     - "Absolute 00s"
-  initial: none
+  initial: None
   icon: mdi:radio
 
 radio_stream_2:
   name: Stream 2
   options:
-    - none
+    - None
     - "Absolute 80s"
     - "Absolute 60s"
     - "Absolute 70s"
     - "Absolute 90s"
     - "Absolute 00s"
-  initial: none
+  initial: None
   icon: mdi:radio
 
 radio_stream_3:
   name: Stream 3
   options:
-    - none
+    - None
     - "Absolute 80s"
     - "Absolute 60s"
     - "Absolute 70s"
     - "Absolute 90s"
     - "Absolute 00s"
-  initial: none
+  initial: None
   icon: mdi:radio
 
 study_stream:
   name: Study
-  initial: off
+  initial: None
   icon: mdi:printer
   options:
-    - none
+    - None
     - "Stream 1"
     - "Stream 2"
     - "Stream 3"
 
 kitchen_stream:
   name: Kitchen
-  initial: off
+  initial: None
   icon: mdi:stove
   options:
-    - none
+    - None
     - "Stream 1"
     - "Stream 2"
     - "Stream 3"
@@ -59,7 +59,7 @@ lounge_stream:
   initial: off
   icon: mdi:sofa
   options:
-    - none
+    - None
     - "Stream 1"
     - "Stream 2"
     - "Stream 3"
@@ -69,7 +69,7 @@ library_stream:
   initial: off
   icon: mdi:library
   options:
-    - none
+    - None
     - "Stream 1"
     - "Stream 2"
     - "Stream 3"
@@ -79,7 +79,7 @@ ballroom_stream:
   initial: off
   icon: mdi:projector
   options:
-    - none
+    - None
     - "Stream 1"
     - "Stream 2"
     - "Stream 3"
@@ -89,7 +89,7 @@ marks_bedroom_stream:
   initial: off
   icon: mdi:hotel
   options:
-    - none
+    - None
     - "Stream 1"
     - "Stream 2"
     - "Stream 3"
