--- a/configuration.yaml
+++ b/configuration.yaml
@@ -70,7 +70,7 @@ media_player: !include media_players.yaml
 light: !include_dir_merge_list lights
 sensor: !include_dir_merge_list sensors
 switch: !include_dir_merge_list switches
-thermostat: !include_dir_merge_list thermostats
+climate: !include_dir_merge_list thermostats
 input_boolean: !include_dir_merge_named input_boolean
 input_select: !include_dir_merge_named input_select
 
