--- a/customize.yaml
+++ b/customize.yaml
@@ -140,45 +140,45 @@ sensor.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_temperature
 sensor.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_temperature_43:
   friendly_name: Hall Annex Temperature
   polling_intensity: 5
-thermostat.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_comfort_setpoint_13:
+climate.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_comfort_setpoint_13:
   friendly_name: Hall West Thermostat_
-thermostat.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_comfort_setpoint_14:
+climate.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_comfort_setpoint_14:
   friendly_name: Study East Thermostat_
-thermostat.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_comfort_setpoint_15:
+climate.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_comfort_setpoint_15:
   friendly_name: Study West Thermostat_
-thermostat.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_comfort_setpoint_24:
+climate.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_comfort_setpoint_24:
   friendly_name: Hall East Thermostat_
-thermostat.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_comfort_setpoint_25:
+climate.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_comfort_setpoint_25:
   friendly_name: Library Thermostat_
-thermostat.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_comfort_setpoint_29:
+climate.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_comfort_setpoint_29:
   friendly_name: Mark's Bedroom Thermostat_
-thermostat.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_comfort_setpoint_30:
+climate.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_comfort_setpoint_30:
   friendly_name: Lounge East Thermostat_
-thermostat.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_comfort_setpoint_33:
+climate.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_comfort_setpoint_33:
   friendly_name: Ballroom East Thermostat_
-thermostat.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_comfort_setpoint_34:
+climate.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_comfort_setpoint_34:
   friendly_name: Kitchen Thermostat_
-thermostat.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_comfort_setpoint_43:
+climate.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_comfort_setpoint_43:
   friendly_name: Hall Annex Thermostat_
 light.fibaro_system_fgd212_dimmer_2_level_39:
   friendly_name: Mark's Bedroom Overhead
-thermostat.horstmann_scsc17_thermostat_heating_1_35:
+climate.horstmann_scsc17_thermostat_heating_1_35:
   friendly_name: Main Heating Thermostat
 sensor.horstmann_scsc17_thermostat_temperature_35:
   friendly_name: Main Heating Temperature
 switch.horstmann_scsc17_thermostat_switch_35:
   friendly_name: Main Heating Holiday Mode
-thermostat.horstmann_scsc17_thermostat_heating_1_50:
+climate.horstmann_scsc17_thermostat_heating_1_50:
   friendly_name: Annex Heating Thermostat
 sensor.horstmann_scsc17_thermostat_temperature_50:
   friendly_name: Annex Heating Temperature
 switch.horstmann_scsc17_thermostat_switch_50:
   friendly_name: Annex Heating Holiday Mode
-thermostat.horstmann_unknown_type0003_id0002_mode_36:
+climate.horstmann_unknown_type0003_id0002_mode_36:
   friendly_name: Main Heating Default Mode
-thermostat.horstmann_unknown_type0003_id0002_mode_36_2:
+climate.horstmann_unknown_type0003_id0002_mode_36_2:
   friendly_name: Main Heating Mode
-thermostat.horstmann_unknown_type0003_id0002_mode_36_3:
+climate.horstmann_unknown_type0003_id0002_mode_36_3:
   friendly_name: Main Hot Water Mode
 switch.horstmann_unknown_type0003_id0002_switch_36:
   friendly_name: Main Heating Switch
@@ -186,7 +186,7 @@ switch.horstmann_unknown_type0003_id0002_switch_36_2:
   friendly_name: Main Heating Switch
 switch.horstmann_unknown_type0003_id0002_switch_36_3:
   friendly_name: Main Hot Water Switch
-thermostat.horstmann_unknown_type0003_id0001_mode_51:
+climate.horstmann_unknown_type0003_id0001_mode_51:
   friendly_name: Annex Heating Mode
 switch.horstmann_unknown_type0003_id0001_switch_51:
   friendly_name: Annex Heating Switch
@@ -284,23 +284,23 @@ sensor.annex_hall_battery:
   friendly_name: Hall Annex Battery
   icon: mdi:battery
 
-thermostat.hall_west_comfort_setpoint_13:
+climate.hall_west_comfort_setpoint_13:
   friendly_name: Hall West Thermostat
-thermostat.study_east_comfort_setpoint_14:
+climate.study_east_comfort_setpoint_14:
   friendly_name: Study East Thermostat
-thermostat.study_west_comfort_setpoint_15:
+climate.study_west_comfort_setpoint_15:
   friendly_name: Study West Thermostat
-thermostat.hall_east_comfort_setpoint_24:
+climate.hall_east_comfort_setpoint_24:
   friendly_name: Hall East Thermostat
-thermostat.library_comfort_setpoint_25:
+climate.library_comfort_setpoint_25:
   friendly_name: Library Thermostat
-thermostat.bedroom_mark_comfort_setpoint_29:
+climate.bedroom_mark_comfort_setpoint_29:
   friendly_name: Mark's Bedroom Thermostat
-thermostat.lounge_east_comfort_setpoint_30:
+climate.lounge_east_comfort_setpoint_30:
   friendly_name: Lounge East Thermostat
-thermostat.ballroom_east_comfort_setpoint_33:
+climate.ballroom_east_comfort_setpoint_33:
   friendly_name: Ballroom East Thermostat
-thermostat.kitchen_comfort_setpoint_34:
+climate.kitchen_comfort_setpoint_34:
   friendly_name: Kitchen Thermostat
-thermostat.annex_hall_comfort_setpoint_43:
+climate.annex_hall_comfort_setpoint_43:
   friendly_name: Hall Annex Thermostat
