Remove temperature_unit, add unit_system

--- a/configuration.yaml
+++ b/configuration.yaml
@@ -5,8 +5,7 @@ homeassistant:
   latitude: 52.23492
   longitude: -0.04496
   elevation: 55
-  # C for Celcius, F for Fahrenheit
-  temperature_unit: C
+  unit_system: metric
   # Pick yours from here: http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
   time_zone: Europe/London
 
