--- a/thermostats/mock_thermostats.yaml
+++ b/thermostats/mock_thermostats.yaml
@@ -2,60 +2,60 @@
   max_temp: 25
   min_temp: 5
   name: study_west_comfort_setpoint_15
-  platform: heat_control
+  platform: generic_thermostat
   target_sensor: sensor.study_west_temperature_15
 - heater: switch.study_demand
   max_temp: 25
   min_temp: 5
   name: study_east_comfort_setpoint_14
-  platform: heat_control
+  platform: generic_thermostat
   target_sensor: sensor.study_east_temperature_14
 - heater: switch.lounge_demand
   max_temp: 25
   min_temp: 5
   name: lounge_east_comfort_setpoint_30
-  platform: heat_control
+  platform: generic_thermostat
   target_sensor: sensor.lounge_east_temperature_30
 - heater: switch.marks_demand
   max_temp: 25
   min_temp: 5
   name: bedroom_mark_comfort_setpoint_29
-  platform: heat_control
+  platform: generic_thermostat
   target_sensor: sensor.bedroom_mark_temperature_29
 - heater: switch.kitchen_demand
   max_temp: 25
   min_temp: 5
   name: kitchen_comfort_setpoint_34
-  platform: heat_control
+  platform: generic_thermostat
   target_sensor: sensor.kitchen_temperature_34
 - heater: switch.ballroom_demand
   max_temp: 25
   min_temp: 5
   name: ballroom_east_comfort_setpoint_33
-  platform: heat_control
+  platform: generic_thermostat
   target_sensor: sensor.ballroom_east_temperature_33
 - heater: switch.library_demand
   max_temp: 25
   min_temp: 5
   name: library_comfort_setpoint_25
-  platform: heat_control
+  platform: generic_thermostat
   target_sensor: sensor.library_temperature_25
 - heater: switch.hall_demand
   max_temp: 25
   min_temp: 5
   name: hall_west_comfort_setpoint_13
-  platform: heat_control
+  platform: generic_thermostat
   target_sensor: sensor.hall_west_temperature_13
 - heater: switch.hall_demand
   max_temp: 25
   min_temp: 5
   name: hall_east_comfort_setpoint_24
-  platform: heat_control
+  platform: generic_thermostat
   target_sensor: sensor.hall_east_temperature_24
 - heater: switch.hall_demand
   max_temp: 25
   min_temp: 5
   name: hall_annex_comfort_setpoint_43
-  platform: heat_control
+  platform: generic_thermostat
   target_sensor: sensor.hall_annex_temperature_43
 
