--- a/customize.yaml
+++ b/customize.yaml
@@ -17,6 +17,21 @@ group.radio:
 group.settings:
   order: 9
 
+group.study_scenes:
+  order: 0
+group.kitchen_scenes:
+  order: 0
+group.hall_scenes:
+  order: 0
+group.lounge_scenes:
+  order: 0
+group.library_scenes:
+  order: 0
+group.ballroom_scenes:
+  order: 0
+group.marks_bedroom_scenes:
+  order: 0
+
 group.mark_present:
   entity_picture: /local/wb-icons/wb_mark.png
 group.anne_present:
