--- a/network.yaml
+++ b/network.yaml
@@ -10,6 +10,7 @@ entities:
 - device_tracker.lounge
 - device_tracker.library
 - device_tracker.bedroommark
+- device_tracker.ricoh213w
 - device_tracker.canonmg5550
 - device_tracker.loungetv
 - device_tracker.ballroomamp
